--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@ html,body{
   overflow:hidden;
   background:#000;
 }
-canvas{
-  display:block;
-}
+canvas{display:block;}
 #ui{
   position:fixed;
   top:10px;
@@ -21,14 +19,14 @@ canvas{
   text-align:center;
   color:white;
   font-family:Arial, sans-serif;
-  font-size:24px;
+  font-size:22px;
   z-index:10;
 }
 </style>
 </head>
 <body>
 
-<div id="ui">❤️ 0</div>
+<div id="ui">⭐ 0</div>
 <canvas id="game"></canvas>
 
 <script>
@@ -42,106 +40,162 @@ function resize(){
   canvas.height = innerHeight;
 }
 
-/* 🌌 GECE GÖKYÜZÜ */
-const stars = [];
-for(let i=0;i<200;i++){
-  stars.push({
+/* 🌌 ARKA PLAN */
+const bgStars=[];
+for(let i=0;i<220;i++){
+  bgStars.push({
     x:Math.random()*canvas.width,
     y:Math.random()*canvas.height,
-    r:Math.random()*1.5,
-    a:Math.random(),
+    r:Math.random()*1.4,
+    a:Math.random()*Math.PI*2,
     s:Math.random()*0.02
   });
 }
 
-/* 🌙 TOPLAYICI (IŞIKLI HALKA) */
-const player = {
-  x: canvas.width/2,
-  y: canvas.height-80,
-  r: 35
+/* 🌙 OYUNCU */
+const player={
+  x:canvas.width/2,
+  y:canvas.height-80,
+  r:36
 };
 
-/* ⭐ DÜŞEN YILDIZ */
-const falling = [];
-let score = 0;
+/* ⭐ YILDIZLAR */
+const stars=[];
+/* ☄️ METEORLAR */
+const meteors=[];
+/* 👾 UZAYLI */
+const aliens=[];
+
+let score=0;
+let gameOver=false;
 
 /* 🎮 KONTROL */
-document.addEventListener("mousemove",e=>{
-  player.x = e.clientX;
-});
-document.addEventListener("touchmove",e=>{
-  player.x = e.touches[0].clientX;
-});
+document.addEventListener("mousemove",e=>player.x=e.clientX);
+document.addEventListener("touchmove",e=>player.x=e.touches[0].clientX);
 
-/* ⭐ YILDIZ OLUŞTUR */
+/* ⭐ YILDIZ */
 setInterval(()=>{
-  falling.push({
-    x: Math.random()*canvas.width,
-    y: -20,
-    r: 10 + Math.random()*6,
-    v: 1.5 + Math.random()*1.5
+  if(gameOver) return;
+  stars.push({
+    x:Math.random()*canvas.width,
+    y:-20,
+    r:10+Math.random()*6,
+    v:1.5+Math.random()*1.2
   });
 },700);
 
-/* 🔄 OYUN DÖNGÜSÜ */
+/* ☄️ METEOR (HIZLI) */
+setInterval(()=>{
+  if(gameOver) return;
+  meteors.push({
+    x:Math.random()*canvas.width,
+    y:-40,
+    r:14+Math.random()*10,
+    v:5+Math.random()*3
+  });
+},1300);
+
+/* 👾 UZAYLI (ARA SIRA) */
+setInterval(()=>{
+  if(gameOver) return;
+  aliens.push({
+    x:-60,
+    y:60+Math.random()*200,
+    w:60,
+    h:26,
+    v:2.5
+  });
+},4000);
+
+/* 🔄 OYUN */
 function loop(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
 
   /* ARKA PLAN */
-  let g = ctx.createRadialGradient(
-    canvas.width/2, canvas.height,
-    50,
-    canvas.width/2, canvas.height,
-    canvas.height
+  let g=ctx.createRadialGradient(
+    canvas.width/2,canvas.height,
+    50,canvas.width/2,canvas.height,canvas.height
   );
   g.addColorStop(0,"#0a1233");
   g.addColorStop(1,"#000");
-  ctx.fillStyle = g;
+  ctx.fillStyle=g;
   ctx.fillRect(0,0,canvas.width,canvas.height);
 
-  /* YILDIZLAR */
-  stars.forEach(s=>{
-    s.a += s.s;
-    ctx.fillStyle = `rgba(255,255,255,${0.3 + Math.sin(s.a)*0.7})`;
+  /* YILDIZLI GÖKYÜZÜ */
+  bgStars.forEach(s=>{
+    s.a+=s.s;
+    ctx.fillStyle=`rgba(255,255,255,${0.3+Math.sin(s.a)*0.7})`;
     ctx.beginPath();
     ctx.arc(s.x,s.y,s.r,0,Math.PI*2);
     ctx.fill();
   });
 
-  /* DÜŞEN YILDIZLAR */
-  for(let i=falling.length-1;i>=0;i--){
-    const f = falling[i];
-    f.y += f.v;
-
-    ctx.fillStyle="rgba(255,255,200,0.9)";
+  /* ⭐ YILDIZLAR */
+  for(let i=stars.length-1;i>=0;i--){
+    const st=stars[i];
+    st.y+=st.v;
+    ctx.fillStyle="rgba(255,255,210,0.95)";
     ctx.beginPath();
-    ctx.arc(f.x,f.y,f.r,0,Math.PI*2);
+    ctx.arc(st.x,st.y,st.r,0,Math.PI*2);
     ctx.fill();
 
-    /* ÇARPIŞMA */
-    const dx = f.x - player.x;
-    const dy = f.y - player.y;
-    if(Math.hypot(dx,dy) < f.r + player.r){
-      falling.splice(i,1);
-      score+=5;
-      document.getElementById("ui").innerText="❤️ "+score;
-    } else if(f.y > canvas.height+50){
-      falling.splice(i,1);
+    if(Math.hypot(st.x-player.x,st.y-player.y)<st.r+player.r){
+      stars.splice(i,1);
+      score++;
+      document.getElementById("ui").innerText="⭐ "+score;
+    } else if(st.y>canvas.height+50){
+      stars.splice(i,1);
     }
   }
 
-  /* IŞIKLI HALKA */
+  /* ☄️ METEOR */
+  for(let i=meteors.length-1;i>=0;i--){
+    const m=meteors[i];
+    m.y+=m.v;
+    ctx.fillStyle="#888";
+    ctx.beginPath();
+    ctx.arc(m.x,m.y,m.r,0,Math.PI*2);
+    ctx.fill();
+
+    if(Math.hypot(m.x-player.x,m.y-player.y)<m.r+player.r){
+      gameOver=true;
+    } else if(m.y>canvas.height+60){
+      meteors.splice(i,1);
+    }
+  }
+
+  /* 👾 UZAYLI */
+  for(let i=aliens.length-1;i>=0;i--){
+    const a=aliens[i];
+    a.x+=a.v;
+
+    ctx.fillStyle="#9ff";
+    ctx.fillRect(a.x,a.y,a.w,a.h);
+
+    /* uzaylı yıldız çalar */
+    for(let j=stars.length-1;j>=0;j--){
+      const st=stars[j];
+      if(st.x>a.x && st.x<a.x+a.w && st.y>a.y && st.y<a.y+a.h){
+        stars.splice(j,1);
+      }
+    }
+
+    if(a.x>canvas.width+80){
+      aliens.splice(i,1);
+    }
+  }
+
+  /* 🌙 HALKA */
   ctx.strokeStyle="rgba(180,220,255,0.9)";
   ctx.lineWidth=4;
   ctx.beginPath();
   ctx.arc(player.x,player.y,player.r,0,Math.PI*2);
   ctx.stroke();
 
-  requestAnimationFrame(loop);
+  if(!gameOver) requestAnimationFrame(loop);
 }
 
 loop();
 </script>
-
 </body>
 </html>
