--- a/index.html
+++ b/index.html
@@ -1,243 +1,194 @@
-r<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>YILDIZ ❤️</title>
+<title>⭐ Yıldızım İçin ⭐</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-html,body{
-  margin:0; padding:0; overflow:hidden;
-  background:#000; font-family:Arial,Helvetica,sans-serif;
-}
-canvas{display:block}
-
-/* 💗 PEMBE CAM GÖREV KARTI */
-#mission{
-  position:fixed;
-  top:15px; left:15px;
-  width:140px; height:140px;
-  background:rgba(255,180,200,0.25);
-  backdrop-filter: blur(12px);
-  border-radius:18px;
-  border:1.5px solid rgba(255,150,180,0.8);
-  box-shadow:0 0 20px rgba(255,140,180,0.6);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  z-index:10;
-}
-#letters{
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
-  gap:8px;
-  font-size:22px;
-  color:#fff4;
+*{box-sizing:border-box;margin:0;padding:0}
+body{
+  background:linear-gradient(180deg,#0b0f2e,#1b1f4a);
+  color:white;
+  font-family:Arial,Helvetica,sans-serif;
+  overflow:hidden;
   text-align:center;
 }
-#letters .on{
-  color:#fff;
-  text-shadow:0 0 10px #ffb6c1;
+#score{
+  font-size:32px;
+  margin:10px;
+}
+#game{
+  position:relative;
+  width:100vw;
+  height:80vh;
+  overflow:hidden;
+}
+.falling{
+  position:absolute;
+  font-size:42px;
+  user-select:none;
+}
+.star{color:#ffd700}
+.bomb{color:red}
+.heart{color:pink}
+.broken{color:#ff4d6d}
+
+#basket{
+  position:absolute;
+  bottom:10px;
+  left:50%;
+  transform:translateX(-50%);
+  font-size:60px;
 }
 
-/* SKOR */
-#score{
-  position:fixed;
-  top:20px; left:50%;
-  transform:translateX(-50%);
-  color:white;
-  font-size:22px;
+#message{
+  display:none;
+  position:absolute;
+  inset:0;
+  background:rgba(0,0,0,.85);
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
   z-index:10;
+}
+#message h1{
+  font-size:36px;
+  margin-bottom:20px;
+}
+#message button{
+  padding:12px 24px;
+  font-size:18px;
+  border:none;
+  border-radius:10px;
+  cursor:pointer;
 }
 </style>
 </head>
+
 <body>
 
-<div id="mission">
-  <div id="letters">
-    <div id="l0">Y</div>
-    <div id="l1">I</div>
-    <div id="l2">L</div>
-    <div id="l3">D</div>
-    <div id="l4">I</div>
-    <div id="l5">Z</div>
+<div id="score">❤️ Skor: <span id="points">0</span></div>
+
+<div id="game">
+  <div id="basket">🗑️</div>
+
+  <div id="message">
+    <h1>⭐ Yıldızım, seni çok seviyorum ❤️</h1>
+    <button onclick="restart()">Tekrar Oyna</button>
   </div>
 </div>
 
-<div id="score">⭐ 0</div>
-<canvas id="game"></canvas>
-
 <script>
-const canvas = document.getElementById("game");
-const ctx = canvas.getContext("2d");
-function resize(){
-  canvas.width = innerWidth;
-  canvas.height = innerHeight;
-}
-resize(); addEventListener("resize",resize);
+const game = document.getElementById("game");
+const basket = document.getElementById("basket");
+const pointsEl = document.getElementById("points");
+const message = document.getElementById("message");
 
-/* 🌌 NEBULA ARKA PLAN */
-const farStars=[], midStars=[];
-for(let i=0;i<120;i++) farStars.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,r:Math.random()*1.2,s:Math.random()*0.15+0.05});
-for(let i=0;i<60;i++) midStars.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,r:Math.random()*2,s:Math.random()*0.35+0.2});
+let basketX = window.innerWidth / 2;
+let score = 0;
+let gameOver = false;
 
-function drawBackground(){
-  const g = ctx.createRadialGradient(
-    canvas.width/2,canvas.height/2,100,
-    canvas.width/2,canvas.height/2,canvas.width
-  );
-  g.addColorStop(0,"#1a0b2e");
-  g.addColorStop(0.5,"#2a1045");
-  g.addColorStop(1,"#05010a");
-  ctx.fillStyle=g;
-  ctx.fillRect(0,0,canvas.width,canvas.height);
+document.addEventListener("mousemove", e=>{
+  basketX = e.clientX;
+  basket.style.left = basketX + "px";
+});
 
-  for(let i=0;i<3;i++){
-    const x=canvas.width*(0.2+Math.random()*0.6);
-    const y=canvas.height*(0.2+Math.random()*0.6);
-    const r=canvas.width*(0.3+Math.random()*0.3);
-    const neb=ctx.createRadialGradient(x,y,0,x,y,r);
-    neb.addColorStop(0,"rgba(255,160,200,0.07)");
-    neb.addColorStop(0.6,"rgba(180,100,255,0.05)");
-    neb.addColorStop(1,"rgba(0,0,0,0)");
-    ctx.fillStyle=neb;
-    ctx.beginPath(); ctx.arc(x,y,r,0,Math.PI*2); ctx.fill();
+document.addEventListener("touchmove", e=>{
+  basketX = e.touches[0].clientX;
+  basket.style.left = basketX + "px";
+});
+
+function createItem(){
+  if(gameOver) return;
+
+  const item = document.createElement("div");
+  item.classList.add("falling");
+
+  const rand = Math.random();
+  if(rand < 0.6){
+    item.textContent = "⭐";
+    item.classList.add("star");
+    item.type = "star";
+  }else if(rand < 0.75){
+    item.textContent = "❤️";
+    item.classList.add("heart");
+    item.type = "heart";
+  }else if(rand < 0.9){
+    item.textContent = "💔";
+    item.classList.add("broken");
+    item.type = "broken";
+  }else{
+    item.textContent = "💣";
+    item.classList.add("bomb");
+    item.type = "bomb";
   }
 
-  ctx.fillStyle="#ffffff55";
-  farStars.forEach(s=>{
-    ctx.beginPath(); ctx.arc(s.x,s.y,s.r,0,Math.PI*2); ctx.fill();
-    s.y+=s.s; if(s.y>canvas.height) s.y=0;
-  });
+  item.style.left = Math.random() * (window.innerWidth - 40) + "px";
+  item.style.top = "-50px";
+  game.appendChild(item);
 
-  ctx.fillStyle="#ffffffaa";
-  midStars.forEach(s=>{
-    ctx.beginPath(); ctx.arc(s.x,s.y,s.r,0,Math.PI*2); ctx.fill();
-    s.y+=s.s; if(s.y>canvas.height) s.y=0;
-  });
-}
-
-/* 🎮 OYUNCU */
-const player={x:canvas.width/2,y:canvas.height-120,r:26};
-addEventListener("mousemove",e=>player.x=e.clientX);
-addEventListener("touchmove",e=>player.x=e.touches[0].clientX);
-
-/* 🧺 ALT KUYULAR */
-const bins=[];
-const letters=["Y","I","L","D","I","Z"];
-function setupBins(){
-  bins.length=0;
-  const w=canvas.width/6;
-  for(let i=0;i<6;i++){
-    bins.push({
-      x:i*w + w/2,
-      y:canvas.height-40,
-      w:w-10,
-      h:50,
-      l:letters[i]
-    });
-  }
-}
-setupBins(); addEventListener("resize",setupBins);
-
-/* ⭐ NORMAL YILDIZLAR */
-let stars=[], score=0;
-setInterval(()=>{
-  stars.push({x:Math.random()*canvas.width,y:-20,r:10});
-},900);
-
-/* ✨ HARF ORBLARI (YILDIZ GİBİ AMA HARF) */
-let letterOrbs=[];
-setInterval(()=>{
-  const idx=Math.floor(Math.random()*6);
-  letterOrbs.push({
-    x:Math.random()*canvas.width,
-    y:-20,
-    r:14,
-    l:letters[idx]
-  });
-},2200);
-
-/* 🔤 GÖREV */
-const mission=[false,false,false,false,false,false];
-function activateLetter(l){
-  const i=letters.indexOf(l);
-  if(i>-1 && !mission[i]){
-    mission[i]=true;
-    document.getElementById("l"+i).classList.add("on");
-  }
-}
-
-/* 🔁 ANA DÖNGÜ */
-function loop(){
-  drawBackground();
-
-  /* oyuncu */
-  ctx.fillStyle="#ffd1dc";
-  ctx.beginPath(); ctx.arc(player.x,player.y,player.r,0,Math.PI*2); ctx.fill();
-
-  /* normal yıldızlar */
-  ctx.fillStyle="#fff";
-  stars.forEach((s,i)=>{
-    ctx.beginPath(); ctx.arc(s.x,s.y,s.r,0,Math.PI*2); ctx.fill();
-    s.y+=4;
-    if(Math.hypot(s.x-player.x,s.y-player.y)<s.r+player.r){
-      stars.splice(i,1);
-      score++;
-      document.getElementById("score").innerText="⭐ "+score;
+  let y = -50;
+  const fall = setInterval(()=>{
+    if(gameOver){
+      clearInterval(fall);
+      item.remove();
+      return;
     }
-    if(s.y>canvas.height) stars.splice(i,1);
-  });
 
-  /* harf orbları */
-  letterOrbs.forEach((o,i)=>{
-    // parıltı
-    const glow=ctx.createRadialGradient(o.x,o.y,0,o.x,o.y,o.r*2);
-    glow.addColorStop(0,"rgba(255,200,220,0.8)");
-    glow.addColorStop(1,"rgba(255,200,220,0)");
-    ctx.fillStyle=glow;
-    ctx.beginPath(); ctx.arc(o.x,o.y,o.r*2,0,Math.PI*2); ctx.fill();
+    y += 4;
+    item.style.top = y + "px";
 
-    ctx.fillStyle="#fff";
-    ctx.beginPath(); ctx.arc(o.x,o.y,o.r,0,Math.PI*2); ctx.fill();
+    const itemRect = item.getBoundingClientRect();
+    const basketRect = basket.getBoundingClientRect();
 
-    ctx.fillStyle="#c06";
-    ctx.font="bold 16px Arial";
-    ctx.textAlign="center";
-    ctx.textBaseline="middle";
-    ctx.fillText(o.l,o.x,o.y);
+    if(
+      itemRect.bottom >= basketRect.top &&
+      itemRect.left < basketRect.right &&
+      itemRect.right > basketRect.left
+    ){
+      handleCatch(item.type);
+      clearInterval(fall);
+      item.remove();
+    }
 
-    o.y+=3;
-
-    bins.forEach(b=>{
-      if(o.y>canvas.height-70 &&
-         Math.abs(o.x-b.x)<b.w/2 &&
-         o.l===b.l){
-        activateLetter(o.l);
-        letterOrbs.splice(i,1);
-      }
-    });
-
-    if(o.y>canvas.height) letterOrbs.splice(i,1);
-  });
-
-  /* kuyular */
-  bins.forEach(b=>{
-    ctx.fillStyle="rgba(255,180,200,0.25)";
-    ctx.strokeStyle="rgba(255,150,180,0.8)";
-    ctx.lineWidth=2;
-    ctx.beginPath();
-    ctx.roundRect(b.x-b.w/2,b.y,b.w,b.h,12);
-    ctx.fill(); ctx.stroke();
-
-    ctx.fillStyle="#fff";
-    ctx.font="16px Arial";
-    ctx.textAlign="center";
-    ctx.fillText(b.l,b.x,b.y+30);
-  });
-
-  requestAnimationFrame(loop);
+    if(y > window.innerHeight){
+      clearInterval(fall);
+      item.remove();
+    }
+  },20);
 }
-loop();
+
+function handleCatch(type){
+  if(type === "star") score += 10;
+  if(type === "heart") score += 5;
+  if(type === "broken") score -= 5;
+  if(type === "bomb"){
+    endGame();
+    return;
+  }
+
+  pointsEl.textContent = score;
+
+  if(score >= 100){
+    endGame(true);
+  }
+}
+
+function endGame(win=false){
+  gameOver = true;
+  message.style.display = "flex";
+  if(!win){
+    message.querySelector("h1").textContent =
+      "💔 Oyun Bitti ama sevgim bitmez ❤️";
+  }
+}
+
+function restart(){
+  location.reload();
+}
+
+setInterval(createItem,800);
 </script>
+
 </body>
 </html>
